--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,74 +1,154 @@
-    
-header{  
-    display:flex;
-    flex-direction:row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content:center;
-    vertical-align: middle;
-    background-color: #2e4966;
-    color: #ccc;
-    padding: 1% .5%;;
-    .mat-typography h1{
-        text-align:justify;
-        display:inline-block;
-        flex:1;
-        margin-top: 16px;
-        align-self: flex-end;
-      }
-    .enlaces{
-      flex: 1;
-      display:flex;
-      flex-direction:row;
-      flex-wrap: nowrap;
-      justify-content:space-evenly;
-      align-items:center;
-      a{
-        text-decoration:none;
-        font-family:Verdana;
-        font-size: 1.2vw;
-        color:#6c6c6c;
-        background-color: #ACD5DE;
-        padding: 1%;
-        border-radius: 15px;
-        &:hover{
-          transition: 0.4s;
-          background-color: #6c6c6c;
-          color: #ACD5DE;
-        }
+@import '../../styles/global.scss';
 
+section {
+  width: 100%;
+  background-color: $blackMarvel;
+  color: $whiteMarvel;
+  font-family: $mainFonts;
+  @include flex(flex, row, wrap, center, space-between, center);
+
+  i {
+    font-size: 2em;
+  }
+
+  .left-section {
+    width: 33%;
+    @include flex(flex, row, wrap, center, center, center);
+    border-left: 1px solid $grayBorders;
+    border-right: 1px solid $grayBorders;
+
+    button {
+      background-color: $blackMarvel;
+      color: $whiteMarvel;
+      border: 0px transparent;
+      cursor: pointer;
+
+      &:hover {
+        transition: all .5s;
+        border-bottom: 1px solid $whiteMarvel;
       }
     }
+
+    .menu {
+      display: none;
+    }
+
+    .userName {
+      @include flex(flex, row, wrap, center, center, center);
+      gap: 1em;
+
+      button {
+        background-color: $blackMarvel;
+        color: $whiteMarvel;
+
+        &:hover {
+          transition: all .5s;
+          border-bottom: 1px solid $whiteMarvel;
+        }
+      }
+
+      svg {
+        width: 25px;
+        fill: $whiteMarvel;
+      }
+    }
+  }
+
+  @include allmedias(phone) {
+    .left-section {
+      width: 32%;
+      @include flex(flex, row, wrap, center, center, center);
+
+      .userName {
+        display: none;
+      }
+
+      .menu {
+        display: flex;
+      }
+    }
+  }
+
+  .logo {
+    width: 33%;
+    @include flex(flex, row, wrap, center, center, center);
+
+    figure {
+      img {
+        max-width: 150px;
+        max-height: 250px;
+        width: 100%;
+      }
+    }
+  }
+
+  .right-section {
+    width: 33%;
+    @include flex(flex, row, wrap, center, center, center);
+    gap: 1em;
+    border-left: 1px solid $grayBorders;
+    border-right: 1px solid $grayBorders;
+
+    button {
+      cursor: pointer;
+    }
+
+    .extra {
+      width: 65%;
+      @include flex(flex, row, wrap, center, center, center);
+
+      gap: 1em;
+
+      figure {
+        img {
+          width: 25px;
+        }
+      }
+
+      article {
+        text-align: center;
+
+        .subscribe {
+          font-size: 0.9em;
+        }
+      }
+    }
+
+    /* Hsta phone se oculta */
+    @include allmedias(phone) {
+      .extra {
+        display: none;
+      }
+    }
+
+    button {
+      background-color: transparent;
+      border: none;
+      color: $whiteMarvel;
+    }
+  }
 }
 
-.language-form{
-    display: flex;
-    flex-wrap: wrap;
-    align-items:flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    margin: 0;
-    padding: 0;
-    background: none;
-  //   box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
-    border-radius: 0.5rem;
-    background-color: #ddd;
-    
-    &__form-field{
-      flex-basis: 100%;
-      flex-grow: 1;
-      &__label{
-        font-size: 1rem;
-        color: #ddd !important;
-      }
-      &__select{
-        font-size: 1rem;
-        color: #333 !important;
-        mat-option{
-          flex:1;
-          color: #ddd;
-        }
-      }
+article {
+  background-color: $blackMarvel;
+
+  nav {
+    @include flex(flex, wrap, row, center, space-between, center);
+    border-top: 1px solid $grayBorders;
+    font-family: $mainFonts;
+    background-color: $blackMarvel;
+    gap: 1em;
+    padding: 1em;
+
+    a {
+      color: $darkGrayMarvel;
     }
-    
   }
+
+  @include allmedias(phone) {
+    nav {
+      display: none;
+      list-style: none;
+    }
+  }
+}
